# PyWry

./: .gitignore  README.md  sbom.json  sbom.xml
.github/workflows/: docs.yml  publish-pywry.yml  sbom.yml  test-pywry.yml
pywry/: .pylintrc  AGENTS.md  README.md  build_assets.py  hatch_build.py  pyproject.toml  pytest.ini  ruff.toml
pywry/docs/: mkdocs.yml  requirements.txt
pywry/docs/docs/: changelog.md  features.md  index.md
pywry/docs/docs/components/: button.md  checkbox.md  dateinput.md  div.md  index.md  marquee.md  multiselect.md  numberinput.md  option.md  radiogroup.md  rangeinput.md  searchinput.md  secretinput.md  select.md  sliderinput.md  tabgroup.md  textarea.md  textinput.md  tickeritem.md  toggle.md  toolbar.md  toolbaritem.md
pywry/docs/docs/examples/: index.md
pywry/docs/docs/getting-started/: index.md  installation.md  quickstart.md  rendering-paths.md  why-pywry.md
pywry/docs/docs/guides/: aggrid.md  app-show.md  browser-mode.md  builder-options.md  chat-artifacts.md  chat.md  configuration.md  content-assembly.md  deploy-mode.md  events.md  hot-reload.md  html-content.md  index.md  javascript-bridge.md  menus.md  modals.md  multi-widget.md  oauth2.md  plotly.md  standalone-executable.md  state-and-auth.md  tauri-plugins.md  theming.md  toasts.md  toolbars.md  tray.md  window-management.md
pywry/docs/docs/javascripts/: component-previews.js
pywry/docs/docs/mcp/: capabilities.md  examples.md  index.md  setup.md  skills.md  tools.md
pywry/docs/docs/overrides/: home.html
pywry/docs/docs/overrides/partials/: header.html
pywry/docs/docs/reference/: asset-loader.md  assets.md  auth-callback-server.md  auth-deploy-routes.md  auth-flow.md  auth-pkce.md  auth-providers.md  auth-session.md  auth-token-store.md  auth.md  callbacks.md  chat-manager.md  chat-providers.md  chat.md  cli.md  commands.md  config.md  css.md  events.md  exceptions.md  grid.md  hot-reload.md  index.md  inline-widget.md  log.md  mcp-api.md  mcp.md  menu-proxy.md  modal.md  models.md  notebook.md  plotly-config.md  pywry.md  runtime.md  scripts.md  state-auth.md  state-mixins.md  state-redis.md  state.md  templates.md  (+10 more)
pywry/docs/docs/reference/components/: button.md  checkbox.md  dateinput.md  div.md  index.md  marquee.md  multiselect.md  numberinput.md  option.md  radiogroup.md  rangeinput.md  searchinput.md  secretinput.md  select.md  sliderinput.md  tabgroup.md  textarea.md  textinput.md  tickeritem.md  toggle.md  toolbar.md  toolbaritem.md
pywry/docs/docs/stylesheets/: component-previews.css  extra.css
pywry/examples/: pywry_demo_aggrid.ipynb  pywry_demo_chat.py  pywry_demo_chat_artifacts.py  pywry_demo_chat_magentic.py  pywry_demo_deploy.py  pywry_demo_freeze.py  pywry_demo_modal.py  pywry_demo_oauth2.py  pywry_demo_plotly.ipynb  pywry_demo_rendering.ipynb  pywry_demo_toolbar.ipynb
pywry/pywry/: Tauri.toml  __init__.py  __main__.py  _freeze.py  app.py  asset_loader.py  assets.py  callbacks.py  chat.py  chat_manager.py  chat_providers.py  cli.py  config.py  exceptions.py  grid.py  hot_reload.py  inline.py  log.py  menu_proxy.py  modal.py  models.py  notebook.py  plotly_config.py  runtime.py  scripts.py  state_mixins.py  templates.py  toolbar.py  tray_proxy.py  types.py  watcher.py  widget.py  widget_protocol.py  window_dispatch.py  window_proxy.py
pywry/pywry/_pyinstaller_hook/: __init__.py  hook-pywry.py
pywry/pywry/auth/: __init__.py  callback_server.py  deploy_routes.py  flow.py  pkce.py  providers.py  session.py  token_store.py
pywry/pywry/capabilities/: default.toml
pywry/pywry/commands/: __init__.py  window_commands.py
pywry/pywry/frontend/: index.html
pywry/pywry/frontend/assets/: icon.icns
pywry/pywry/frontend/src/: aggrid-defaults.js  auth-helpers.js  chat-handlers.js  main.js  modal-handlers.js  plotly-defaults.js  plotly-templates.js  plotly-widget.js  scrollbar.js  toast-notifications.js  toolbar-handlers.js  tooltip-manager.js
pywry/pywry/frontend/style/: chat.css  pywry.css  toast.css
pywry/pywry/mcp/: __init__.py  __main__.py  agentic.py  builders.py  docs.py  handlers.py  install.py  prompts.py  resources.py  server.py  state.py  tools.py
pywry/pywry/mcp/skills/: __init__.py  component_reference.md  data_visualization.md  deploy.md  forms_and_inputs.md  iframe.md  modals.md  styling.md
pywry/pywry/mcp/skills/authentication/: SKILL.md
pywry/pywry/mcp/skills/autonomous_building/: SKILL.md
pywry/pywry/mcp/skills/chat/: SKILL.md
pywry/pywry/mcp/skills/css_selectors/: SKILL.md
pywry/pywry/mcp/skills/data_visualization/: SKILL.md
pywry/pywry/mcp/skills/interactive_buttons/: SKILL.md
pywry/pywry/mcp/skills/jupyter/: SKILL.md
pywry/pywry/mcp/skills/native/: SKILL.md
pywry/pywry/state/: __init__.py  _factory.py  auth.py  base.py  callbacks.py  memory.py  redis.py  server.py  sync_helpers.py  types.py
pywry/pywry/utils/: __init__.py  async_helpers.py
pywry/pywry/window_manager/: __init__.py  controller.py  lifecycle.py
pywry/pywry/window_manager/modes/: __init__.py  base.py  browser.py  multi_window.py  new_window.py  single_window.py
pywry/tests/: conftest.py  constants.py  test_alerts.py  test_asset_loader.py  test_assets.py  test_auth_callback_server.py  test_auth_deploy_routes.py  test_auth_flow_integration.py  test_auth_providers.py  test_auth_rbac_integration.py  test_auth_session.py  test_auth_token_store.py  test_browser_mode_e2e.py  test_chat.py  test_chat_e2e.py  test_chat_manager.py  test_cli.py  test_config.py  test_deploy_mode_integration.py  test_e2e.py  test_e2e_deploy_mode.py  test_e2e_rbac_widgets.py  test_error_paths.py  test_exceptions.py  test_freeze.py  test_grid.py  test_hot_reload.py  test_inline_e2e.py  test_inline_ssl.py  test_integration.py  test_marquee_e2e.py  test_mcp_e2e.py  test_mcp_unit.py  test_menu_tray.py  test_modal.py  test_modal_e2e.py  test_models.py  test_plotly_config.py  test_plotly_theme_merge.py  test_plotly_theme_merge_e2e.py  (+18 more)
