[project]
name = "pywry"
version = "2.0.0"
description = "A blazingly fast 100% Python library for cross-platform webview window handling and content rendering, with offline support for AgGrid and Plotly."
authors = [{ name = "PyWry", email = "pywry2@gmail.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Internet :: WWW/HTTP"
]
keywords = ["rendering", "frontend", "webview", "tauri", "gui", "plotly", "aggrid", "desktop", "notebook", "ipywidget"]

dependencies = [
    "pytauri>=0.8.0",
    "anyio>=4.0.0",
    "pandas>=1.5.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "watchdog>=3.0.0",
    "websockets>=16.0.0",
    "setproctitle>=1.3.0",
]

[project.scripts]
pywry = "pywry.cli:main"

[project.optional-dependencies]
dev = [
    "pytauri-wheel>=0.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.13",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "anywidget>=0.9.0",
    "cryptography>=46.0.0",
    "plotly>=6.5.0",
    "fakeredis>=2.33.0",
    "testcontainers>=4.14.0",
    "mcp>=1.26.0",
]
notebook = [
    "anywidget>=0.9.0",
]
mcp = [
    "mcp>=1.26.0",
]
all = [
    "anywidget>=0.9.0",
    "mcp>=1.26.0",
]

[project.urls]
Homepage = "https://github.com/deeleeramone/PyWry"
Repository = "https://github.com/deeleeramone/PyWry"
Documentation = "https://github.com/deeleeramone/PyWry/pywry#readme"

[build-system]
requires = ["hatchling>=1.21.0", "pip", "pytauri-wheel>=0.8.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pywry"]
# Force platform-specific wheel since we bundle native pytauri binaries
# Setting this to false tells hatch this is NOT a pure Python package
strict-naming = false

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "pywry/**/*",
    "AGENTS.md",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["plotly.*", "anywidget", "anywidget.*", "ipywidgets", "ipywidgets.*"]
ignore_missing_imports = true

# =============================================================================
# cibuildwheel configuration for platform-specific wheels
# =============================================================================
[tool.cibuildwheel]
build = "cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "pp* *-musllinux*"
test-command = "python -c \"import pywry; print(f'pywry {pywry.__version__} loaded successfully')\""
dependency-versions = "latest"

[tool.cibuildwheel.linux]
before-all = "curl --proto '=https' --tlsv1.2 -sSf https://sh.rustup.rs | sh -s -- -y && dnf install -y webkit2gtk4.1-devel gtk3-devel || yum install -y webkit2gtk4.1-devel gtk3-devel || true"
environment = { PATH = "$HOME/.cargo/bin:$PATH" }
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
repair-wheel-command = ""

[tool.cibuildwheel.macos]
# Disable delocate repair - we bundle pre-built pytauri-wheel binaries
repair-wheel-command = ""

[tool.cibuildwheel.windows]
# No repair needed on Windows
repair-wheel-command = ""
