[project]
name = "pywry"
version = "2.0.0"
description = "A lightweight and blazingly fast, cross-platform, WebView rendering engine and desktop UI toolkit for Python."
authors = [{ name = "PyWry", email = "pywry2@gmail.com" }]
license = { text = "Apache 2.0" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Desktop Environment :: Window Managers",
    "Topic :: Desktop Environment :: Gnome",
    "Topic :: Internet :: WWW/HTTP"
]
keywords = ["rendering", "frontend", "webview", "tauri", "gui", "plotly", "aggrid", "desktop", "notebook", "ipywidget"]

dependencies = [
    "pytauri>=0.8.0",
    "anyio>=4.0.0",
    "httpx>=0.27.0",
    "pandas>=1.5.3",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "redis>=7.1.0",
    "requests>=2.32.5",
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "watchdog>=3.0.0",
    "websockets>=16.0.0",
    "setproctitle>=1.3.0",
]

[project.scripts]
pywry = "pywry.cli:main"

[project.optional-dependencies]
dev = [
    "pytauri-wheel>=0.8.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-timeout>=2.0.0",
    "ruff>=0.13",
    "mypy>=1.0.0",
    "pylint>=3.0.0",
    "anywidget>=0.9.0",
    "cryptography>=46.0.0",
    "plotly>=6.5.0",
    "fakeredis>=2.33.0",
    "testcontainers>=4.14.0",
    "fastmcp>=2.14.5,<3",
    "ipykernel>=7.2.0",
]
notebook = [
    "anywidget>=0.9.0",
    "ipykernel>=7.2.0",
]
mcp = [
    "fastmcp>=2.14.5,<3",
]
auth = [
    "keyring>=24.0",
    "authlib>=1.3.0",
]
all = [
    "anywidget>=0.9.0",
    "fastmcp>=2.14.5,<3",
    "ipykernel>=7.2.0",
    "keyring>=24.0",
]

[project.urls]
Homepage = "https://github.com/deeleeramone/PyWry"
Repository = "https://github.com/deeleeramone/PyWry"
Documentation = "https://deeleeramone.github.io/PyWry/"

[build-system]
requires = ["hatchling>=1.21.0", "pip", "pytauri-wheel>=0.8.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pywry"]
# Force platform-specific wheel since we bundle native pytauri binaries
# Setting this to false tells hatch this is NOT a pure Python package
strict-naming = false

[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
    "pywry/**/*",
    "AGENTS.md",
]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
exclude = ["tests/"]

[[tool.mypy.overrides]]
module = ["plotly.*", "anywidget", "anywidget.*", "ipywidgets", "ipywidgets.*"]
ignore_missing_imports = true
